# executive_documents

./: .gitignore  Dockerfile  Readme.md  docker-compose.yml  pyproject.toml  settings.yaml  start.sh
.github/workflows/: dev.yml  prod.yml
app/: main.py  settings.py
app/db/: db.py
app/graphql_app/: mutation.py  query.py
app/migrations/: env.py
app/migrations/versions/: baa8097ba809_1.py
app/models/: base.py
app/models/journal/: merge.py
app/models/journal/job/: general_work.py
app/models/journal/material/: material_all.py
app/service/: crud.py
app/shemas/: base.py
app/shemas/journal/: base.py
app/shemas/journal/job/: general_work.py
migrations/versions/: 4a34b4aeb8ca_20220620174500.py  4e3e960a2f64_20220621144000.py  add743762aca_20220621140500.py  b80f3fa3ee16_20220620154000.py  c0423c8337da_20220621135000.py
